Fix layout issues

--- a/src/components/Activity/styles.styl
+++ b/src/components/Activity/styles.styl
@@ -1,7 +1,6 @@
 $width = 600px
 
 .root
-  width: 100%
   max-width: $width
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.5)
   background: rgba(20, 25, 30, 1.0)
@@ -9,7 +8,7 @@ $width = 600px
   margin-bottom: 25px
 
 .image
-  width: 100%
+  width: $width
   height: 240px
   object-fit: cover
   object-position: center
